Button fix z-index and fallbacks

--- a/src/globals.css
+++ b/src/globals.css
@@ -70,7 +70,7 @@ body {
 
 @font-face {
   font-family: 'SF Pro Display';
-  src: url('./SFPRODISPLAYREGULAR.woff2') format('woff2');
+  src: url('/SFPRODISPLAYREGULAR.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -267,7 +267,7 @@ h1.hero-section__title--foreground .hero-section__title-main {
 
 .actions {
   position: relative;
-  z-index: 1;
+  z-index: 50;
   grid-column: 1 / -1;
   grid-row-start: 3;
 }
